<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FFFFF9">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:src="@drawable/login_start1"
        android:scaleType="fitXY"
        >
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="278dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:paddingLeft="43dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:gravity="center"
            android:paddingRight="31dp"
            android:orientation="vertical"
            android:background="@drawable/shape_login_form">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/customer">
                </ImageView>
                <EditText
                    android:id="@+id/et_account"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint"
                    android:textColorHint="#bcbcbc"
                    android:textColor="#000000">
                </EditText>
            </LinearLayout>
            <View
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e8e7e7">
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/pwd2">
                </ImageView>
                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/psw_hint"
                    android:inputType="textPassword"
                    android:textColorHint="#bcbcbc"
                    android:textColor="#000000">
                </EditText>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bt_log"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="33dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_big_login_btn"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="24dp"></Button>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="33dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_big_login_btn"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24dp"></Button>
    </LinearLayout>
</RelativeLayout>